fixed the installation page on smaller screens

--- a/docs/docs/style.css
+++ b/docs/docs/style.css
@@ -461,5 +461,6 @@ pre {
 } .winscreen {
   max-width: 100%;
 } .macscreen {
+  width: 100%;
   max-width: 400px;
 }
